--- a/requirements.txt
+++ b/requirements.txt
@@ -5,9 +5,18 @@ Django==2.2.5
 django-annoying==0.10.6
 django-crispy-forms==1.7.2
 django-filter==2.1.0
+django-fluent-contents==2.0.7
+django-fluent-utils==2.0.1
+django-parler==2.0.1
+django-polymorphic==2.1.2
 django-registration==3.1
+django-tag-parser==3.2
+django-template-analyzer==1.6.2
 djangorestframework==3.9.4
 djangorestframework-simplejwt==4.3.0
+fluentcms-countdown==1.2
+future==0.18.2
+html5lib==1.0.1
 idna==2.9
 Markdown==3.1.1
 Pillow==5.2.0
@@ -18,3 +27,4 @@ six==1.14.0
 sorl-thumbnail==12.6.3
 sqlparse==0.3.0
 urllib3==1.25.8
+webencodings==0.5.1
